2020-10-20  Charlie Zender  <zender@uci.edu>

	* ncremap set wgt_typ=esmf for relevant algorithms

2020-10-16  Charlie Zender  <zender@uci.edu>

	* NCO 4.9.6-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.6-alpha03: Octopus teacher';git push
	git tag -a 4.9.6-alpha03 -m 'netCDF 4.8.0 filter mods; ncremap fix rll bnds; ncclimo docs v2, -P prc_typ';git push --tags

	* ncclimo add --prc_typ option and pass through to regridder, supercedes mdl_nm

	* ncclimo call ncremap rather than ncks for splitting

	* ncclimo call ncremap rather than ncks for climo regridding

	* ncremap generalize GenerateOverlapMesh as variables wgt_exe_tps, cmd_msh_tps

2020-10-14  Charlie Zender  <zender@uci.edu>

	* Verify future-compatibility with upcoming 4.8.0 on glace

	* Remove nc_var_filter_remove(), change nc_var_filterx() to nc_var_filter_ccr() (in case useful)

	* Change nc_inq_var_filterids() to nc_inq_var_filter_ids() unless NC_LIB_VERSION == 474

	* Update Confluence, help screens to v2 options

2020-10-09  Charlie Zender  <zender@uci.edu>

	* Assignment of final interface latitude/longitude in regridder no longer assumes specific origin vertex for CCW ordering

	* Use NCO RLL storage convention (ul,ll,lr,ur) to determine final lat_ntf/lon_ntf

	* NCO 4.9.6-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.6-alpha02: Superspreader';git push
 	git tag -a 4.9.6-alpha02 -m 'autotools libudunits2.dylib; ncremap nfr n2s rll nobnds, lat_d/lon_d; ncra -N';git push --tags

	* Fix grid inferral error for last interface boundary (grid_corner_lat) of N2S RLL grids without coordinate bounds

2020-10-08  Charlie Zender  <zender@uci.edu>

	* Replace old benchmark case famipc5_ne30_v0.3_00003 by 20180129.DECKv1b_piControl.ne30_oEC.edison

	* Add lat_d, lon_d, area_d, area_p, ncol_d, ncol_p to regridding database

2020-10-02  Charlie Zender  <zender@uci.edu>

	* Improve regression tests for ncra -N, mostly working

2020-10-01  Charlie Zender  <zender@uci.edu>
